--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<br>
 			Minsu Kim<sup>*</sup>, Rodrigo Mira<sup>*</sup>, Honglie Chen, Stavros Petridis, Maja Pantic <br>
 			<sup>*</sup>Equal contribution <br>
-			ICASSP 2025 <a href="https://arxiv.org/abs/">[Paper]</a> <a href="https://github.com/ms-dot-k/">[Code]</a>
+			ICASSP 2025 <a href="https://arxiv.org/abs/2503.08798">[Paper]</a> <a href="https://github.com/miraodasilva/contextual-speech-extraction">[Code]</a>
 		</p>	
 	<p style="vertical-align: middle; text-align: center; margin-bottom: 10px;"><img src="pics/Figure.png" width="500"></p>
 	
